--- a/style.css
+++ b/style.css
@@ -9,3 +9,9 @@
 .p-color{
     color: #03071280;
 }
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
